--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ img {
         <div class="carousel-inner" >
 
           <div class="carousel-item active" id="container">
-            <img src="C:\My Projects\Images\Paarshooting-Schwenningen-66.jpg" class="d-block">
+            <img src="Images\Paarshooting-Schwenningen-66.jpg" class="d-block">
             <p class="text">HOME              PORTFOLIO              ABOUT              TESTIMONIALS              CONTACT</p>
                         <div class="overlay-text"><h1>Photography<br>
                          is the Beauty of Life,<br>Captured</h1>
@@ -142,7 +142,7 @@ img {
         </div>
 
       <div class="carousel-item">
-        <img src="C:\My Projects\Images\El-Hayek-Family-2021-92.jpg" class="d-block">
+        <img src="Images\El-Hayek-Family-2021-92.jpg" class="d-block">
         <p class="text">HOME              PORTFOLIO              ABOUT              TESTIMONIALS              CONTACT</p>
         <div class="overlay-text"><h1>Photography<br>
           is the Beauty of Life,<br>Captured</h1>
@@ -151,7 +151,7 @@ img {
       </div>
 
       <div class="carousel-item">
-        <img src="C:\My Projects\Images\R (4).jpeg" class="d-block">
+        <img src="Images\R (4).jpeg" class="d-block">
         <p class="text">HOME              PORTFOLIO              ABOUT              TESTIMONIALS              CONTACT</p>
         <div class="overlay-text"><h1>Photography<br>
           is the Beauty of Life,<br>Captured</h1>
