--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!Doctype html>
 <html lang="en">
   <head>
-    <title>photograpy</title>
+    <title>capture</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Com[atible" content="ie=edge">
-<link rel="stylesheet" href="C:\Programming Languages\bootstrap-5.2.3-dist\bootstrap-5.2.3-dist\css\bootstrap.min.css" media="all">
-<link rel="stylesheet" href="C:\My Projects\Front-End development\Photography\Photography.css" media="all">
+<link rel="stylesheet" href="style.css" media="all">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="C:\My Projects\Front-End development\Photography\Photography.js"></script>
@@ -170,11 +169,11 @@ img {
   </div>
 </div>
     <div class="grid">
-    <img src="C:\My Projects\Images\068ceac2188628cf11a7432af44287b4.jpg" class="img1">
-    <img src="C:\My Projects\Images\wp2818595.webp" class="img2"><br>
-    <img src="C:\My Projects\Images\desktop-wallpaper-romantic-couple-dp-for-whatsapp-profile-pics-stylish-couple-thumbnail.jpg" class="img3">
-    <img src="C:\My Projects\Images\photo-1540076156429-35ffe82b7870.avif" class="img4">
-    <img src="C:\My Projects\Images\couple-pictures-aayrqyfiw5ul3poe.jpg" class="img5">
+    <img src="Images\068ceac2188628cf11a7432af44287b4.jpg" class="img1">
+    <img src="Images\wp2818595.webp" class="img2"><br>
+    <img src="Images\desktop-wallpaper-romantic-couple-dp-for-whatsapp-profile-pics-stylish-couple-thumbnail.jpg" class="img3">
+    <img src="Images\photo-1540076156429-35ffe82b7870.avif" class="img4">
+    <img src="Images\couple-pictures-aayrqyfiw5ul3poe.jpg" class="img5">
   </div>
 
   <div class="testmonial">
@@ -200,20 +199,20 @@ img {
         <div class="carousel-inner">
 
           <div class="carousel-item active">
-    <img src="C:\My Projects\Images\011-golden-hour-couple-portrait.jpg" class="test-img">
+    <img src="Images\011-golden-hour-couple-portrait.jpg" class="test-img">
     </div>
     <div class="carousel-item">
-    <img src="C:\My Projects\Images\wp6445776.webp" class="test-img">
+    <img src="Images\wp6445776.webp" class="test-img">
     </div>
     <div class="carousel-item">
-    <img src="C:\My Projects\Images\dawes-arboretum-engagement-forget-me-knot-photography-26.jpg" class="test-img">
+    <img src="Images\dawes-arboretum-engagement-forget-me-knot-photography-26.jpg" class="test-img">
   </div>
   </div>
 </div>
 </div>
 </div>
 <div class="second-img">
-  <img src="C:\My Projects\Images\random-questions-to-ask-scaled-728x410.jpg" id="second-img">
+  <img src="Images\random-questions-to-ask-scaled-728x410.jpg" id="second-img">
 </div>
 <h1 class="second-img-text">LOVE<br>AND<br>PEACE</h1>
 <div class="quote-text">
@@ -228,15 +227,15 @@ img {
     <button class="text-button">Button</button>
 </div>
 <div class="scroll-container">
-  <img src="C:\My Projects\Images\OIP.jpeg">
-  <img src="C:\My Projects\Images\photo-1567051181435-c9c9647c9cd4.avif">
-  <img src="C:\My Projects\Images\6076c978026ab88a13c0e7e2d51739a4.jpg">
-  <img src="C:\My Projects\Images\beautiful-couple-having-their-wedding-beach_23-2149043947.avif">
-  <img src="C:\My Projects\Images\couple-8114180_960_720.webp">
-  <img src="C:\My Projects\Images\Wedding_Couple on roll-up Web.jpg">
-  <img src="C:\My Projects\Images\Wedding-Photography-Roswell-GA-683x1024.jpg">
-  <img src="C:\My Projects\Images\wpid465315-temperley.jpg">
-  <img src="C:\My Projects\Images\netalia1-63.jpg">
+  <img src="Images\OIP.jpeg">
+  <img src="Images\photo-1567051181435-c9c9647c9cd4.avif">
+  <img src="Images\6076c978026ab88a13c0e7e2d51739a4.jpg">
+  <img src="Images\beautiful-couple-having-their-wedding-beach_23-2149043947.avif">
+  <img src="Images\couple-8114180_960_720.webp">
+  <img src="Images\Wedding_Couple on roll-up Web.jpg">
+  <img src="Images\Wedding-Photography-Roswell-GA-683x1024.jpg">
+  <img src="Images\wpid465315-temperley.jpg">
+  <img src="Images\netalia1-63.jpg">
 </div>
 <div class="content">
   <div class="content-left"><br><br><br>
@@ -245,12 +244,12 @@ img {
   </div>
   <div class="model1"></div>
   <div class="content-right">
-    <img src="C:\My Projects\Images\HD-wallpaper-chinese-korean.jpg" class="content-img">
+    <img src="Images\HD-wallpaper-chinese-korean.jpg" class="content-img">
   </div>
 </div>
 <div class="content1">
   <div class="content-left1">
-    <img src="C:\My Projects\Images\pexels-photo-2247858.jpeg" class="content-img1">
+    <img src="Images\pexels-photo-2247858.jpeg" class="content-img1">
   </div>
   <div class="model2"></div>
   <div class="content-right1"><br><br>
@@ -263,23 +262,23 @@ img {
   <h2 style="text-align:center">MEMORIES</h2><br>
 <div class="container">
   <div class="mySlides">
-    <img src="C:\My Projects\Images\5f8daea54e5fce3b1ab86f11__M5A9594-p-1600.jpeg" style="width:100%;height: 700px;">
+    <img src="Images\5f8daea54e5fce3b1ab86f11__M5A9594-p-1600.jpeg" style="width:100%;height: 700px;">
   </div>
 
   <div class="mySlides">
-    <img src="C:\My Projects\Images\Glendale-Wedding-.jpg" style="width:100%;height: 700px;">
+    <img src="Images\Glendale-Wedding-.jpg" style="width:100%;height: 700px;">
   </div>
 
   <div class="mySlides">
-    <img src="C:\My Projects\Images\2019-10-30_0019.jpg" style="width:100%;height: 700px;">
+    <img src="Images\2019-10-30_0019.jpg" style="width:100%;height: 700px;">
   </div>
     
   <div class="mySlides">
-    <img src="C:\My Projects\Images\R (1).jpeg" style="width:100%;height: 700px;">
+    <img src="Images\R (1).jpeg" style="width:100%;height: 700px;">
   </div>
 
   <div class="mySlides">
-    <img src="C:\My Projects\Images\R.jpeg" style="width:100%;height: 700px;">
+    <img src="Images\R.jpeg" style="width:100%;height: 700px;">
   </div>
     
   <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -290,19 +289,19 @@ img {
 
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="C:\My Projects\Images\5f8daea54e5fce3b1ab86f11__M5A9594-p-1600.jpeg" style="width:259px;" onclick="currentSlide(1)">
+      <img class="demo cursor" src="Images\5f8daea54e5fce3b1ab86f11__M5A9594-p-1600.jpeg" style="width:259px;" onclick="currentSlide(1)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\My Projects\Images\Glendale-Wedding-.jpg" style="width:259px;margin-left: 39px;" onclick="currentSlide(2)">
+      <img class="demo cursor" src="Images\Glendale-Wedding-.jpg" style="width:259px;margin-left: 39px;" onclick="currentSlide(2)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\My Projects\Images\2019-10-30_0019.jpg" style="width:260px;margin-left: 78px;" onclick="currentSlide(3)">
+      <img class="demo cursor" src="Images\2019-10-30_0019.jpg" style="width:260px;margin-left: 78px;" onclick="currentSlide(3)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\My Projects\Images\R (1).jpeg" style="width:260px;margin-left: 118px;" onclick="currentSlide(4)">
+      <img class="demo cursor" src="Images\R (1).jpeg" style="width:260px;margin-left: 118px;" onclick="currentSlide(4)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\My Projects\Images\R.jpeg" style="width:259px;margin-left: 158px;" onclick="currentSlide(5)">
+      <img class="demo cursor" src="Images\R.jpeg" style="width:259px;margin-left: 158px;" onclick="currentSlide(5)">
     </div>    
   </div>
 </div>
@@ -312,7 +311,7 @@ img {
     -Giles Duley</p>
 </div>
 <div class="special">
-  <img src="C:\My Projects\Images\camera.png" width="200" height="200">
+  <img src="Images\camera.png" width="200" height="200">
 </div>
 <div class="footer"></div>
   </body>
