--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ img {
   </div>
   <div class="model1"></div>
   <div class="content-right">
-    <img src="Images\HD-wallpaper-chinese-korean.jpg" class="content-img">
+    <img src="Images\koreancouple.jpg" class="content-img">
   </div>
 </div>
 <div class="content1">
