--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 <div class="special">
   <img src="Images\camera.png" width="200" height="200">
 </div>
+<div class="space"></div>
 <div class="footer"></div>
   </body>
 </html>
